# memo-rs

./: .gitignore  Cargo.toml  README.md
examples/: demo.json
img/: demo.tape
src/: config.rs  entry.rs  main.rs  message.rs  model.rs  model_io.rs
src/model/: entry.rs  mod.rs  model_io.rs
src/ui/: keybindings_block.rs  main_screen.rs  mod.rs  secondary_screen.rs  title_block.rs  tui.rs
