[package]
name = "memors"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["Asier Pereiro Castro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.204", features = ["derive"] }
arboard = "3.4.0"
ratatui = "0.26.2"
crossterm = "0.27.0"
color-eyre = "0.6.3"
clap = { version = "4.5.4", features = ["derive"] }
